<resources>
    <string name="app_name">MainActivity</string>
    <string name="load_game">Load Game</string>
    <string name="start_game">Start Game</string>
    <string name="player_hand">Player Hand</string>
    <string name="computer_hand">Computer Hand</string>
    <string name="discard_pile">Discard Pile</string>
    <string name="draw_pile">Draw Pile</string>
    <string name="round_details">Round Details</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
    <string name="move">Move:</string>
    <string name="next_player">next player</string>
    <string name="round_num">round num</string>
    <string name="score">Score:</string>
    <string name="congratulations">Congratulations !!</string>
    <string name="final_scores">Final Scores:</string>
    <string name="winner">winner</string>

</resources>
