<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoundActivity">

    <HorizontalScrollView
        android:id="@+id/HorizontalScrollView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comp_title">

        <LinearLayout
            android:id="@+id/comp_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/HorizontalScrollView3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HorizontalScrollView2">

        <LinearLayout
            android:id="@+id/draw_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/HorizontalScrollView4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HorizontalScrollView3">

        <LinearLayout
            android:id="@+id/discard_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/HorizontalScrollView5"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HorizontalScrollView4">

        <LinearLayout
            android:id="@+id/player_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <TextView
        android:id="@+id/player_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_hand"
        app:layout_constraintBottom_toTopOf="@+id/HorizontalScrollView5"
        app:layout_constraintEnd_toStartOf="@+id/player_score"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/draw_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw_pile"
        app:layout_constraintBottom_toTopOf="@+id/HorizontalScrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/discard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discard_pile"
        app:layout_constraintBottom_toTopOf="@+id/HorizontalScrollView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/comp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/computer_hand"
        app:layout_constraintEnd_toStartOf="@+id/comp_score"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/details_main"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HorizontalScrollView5">

        <LinearLayout
            android:id="@+id/details_vertical"
            android:layout_width="257dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/round_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/round_num" />

            <TextView
                android:id="@+id/next_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_player" />

            <TextView
                android:id="@+id/next_move"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/move" />
        </LinearLayout>

        <Button
            android:id="@+id/help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help"
            android:onClick="helpButton"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:onClick="saveButton"/>
    </LinearLayout>

    <TextView
        android:id="@+id/comp_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:text="@string/score"
        app:layout_constraintBottom_toTopOf="@+id/HorizontalScrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/player_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:text="@string/score"
        app:layout_constraintBottom_toTopOf="@+id/HorizontalScrollView5"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>